fixed z-index issue

--- a/css/style.css
+++ b/css/style.css
@@ -64,7 +64,6 @@ main {
     top:0;
     width: 100%;
     height: 100%;
-    z-index: -1;
 }
 
 #red-player .cell {
